# hermes-bridge

./: .env.example  .gitignore  DOCS.md  Dockerfile  KNOWLEDGE.md  PLAN.md  README.md  SOUL.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: release.yml
docs/: openapi.yaml
src/hermes_bridge/: app.py  auth.py  cli.py  config.py  dashboard_token.py  fs.py  upstream.py
src/hermes_bridge/routes/: chat.py  config.py  cron.py  gateway.py  health.py  observability.py  providers.py  sessions.py
tests/: conftest.py  test_auth.py  test_chat_stream.py  test_config_proxy.py  test_gateway_lifecycle.py  test_health.py
